<package>
  <name>omnibot_base</name>
  <version>1.0.0</version>
  <description>
  This package provides a ROS interface for OmniBot
  </description>
  <maintainer email="andrew@lobos.me">Andrew Lobos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>
